--- a/index.html
+++ b/index.html
@@ -2,48 +2,49 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>exo 28</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- 1 -->
 
-<p  ="       ;">Ceci est un paragraphe.</p>
+<p class="1" style="color: blue;">Ceci est un paragraphe.</p>
 
 
 <!-- 2 -->
 
-<p style=":courier;">Ceci est un paragraphe.</p>
+<p class="2" style="font-family: 'Courier New'">Ceci est un paragraphe.</p>
 
 
 <!-- 3 -->
 
-<p style=":center;">Ceci est un paragraphe.</p>
+<p class="3" style="text-align: center">Ceci est un paragraphe.</p>
 
 
 <!-- 4 -->
 
 
-<p style=":50px;">Ceci est un paragraphe.</p>
+<p class="4" style=font-size:50px>Ceci est un paragraphe.</p>
 
 
 <!-- 5 -->
 
-<div style=":yellow;">
+<div Class="5" style="background-color: yellow">
     <p>Ceci est encore un paragraphe.</p>
 </div>
 
 
 <!-- 6 -->
 
-<div style=" : ;">
+<div class="6" style="text-align: center">
     <p>Ceci est encore un paragraphe centré.</p>
 </div>
 
 
 <!-- 7 -->
 
-<div style=" : ;">
+<div class="7" style="border: 1px solid blue" >
     <p>Le conteneur de ce paragraphe a une bordure.</p>
 </div>
 
